scss/screen.scss
/* ... */
#search-form {
  padding: 7px 5px;
  border-bottom: 1px solid #3b73b3;
  border-top: 1px solid #b5d6f1;
}

#searchterm {
  line-height: 2;
  margin-left: -22px;
}

#searchresult-wrapper {

}

li.ui-li h3.no-search-results {
  padding-left: 11px;
  padding-top: 20px;
  background:#EEE;
}

/* Icons and styling of predefined search items **************************** */

@mixin predefined-search($id, $icon-name) {
  ##{$id} {
    background: transparent url(../images/icons/#{$icon-name}_icn.png) no-repeat 8px 50%;

    @media only screen and (-webkit-min-device-pixel-ratio: 2) {
      background-image: url(../images/icons/#{$icon-name}_icn_x2.png);
      background-size: 30px 30px;
    }

    h3 {
      padding-left: 33px;
      padding-top: 10px;
    }
  }
}

@include predefined-search(anbefalinger, recommend);
@include predefined-search(nye, newbooks);
@include predefined-search(top, top10);
@include predefined-search(tegneserie, tegneserie);
@include predefined-search(topung, top10);
@include predefined-search(topvoksen, top10);
@include predefined-search(kommersnart, coming);


#searchresult {
  .ui-li {
    height: 58px;
    padding: 0;
  }
  li {
    background-color: #ebebeb;
    border-top: 1px solid #fff;
    border-bottom: 1px solid #888888;
    height: 43px;
    img {
      height: 58px;
      max-height: none;
      margin: 0;
      width: auto;
      left: 0px;
      top: 0px;
    }
    .book-play-link {
      padding-left: 50px;
      padding-top:11px;
    }
    .ui-btn {
      border: none;
      background: none;
      @include box-shadow(none);
    }
    .cover-image {
      max-width: none;
    }
    .cover-image-frame {
      width: 37px;
      overflow: hidden;
      position: absolute;
      top: 0;
      left: 0;
      height: 58px;
    }
    .ui-li-heading {
      font-size: 14px;
      font-weight: bold;
      margin: 0;
    }
    .ui-li-desc {
      font-size: 12px;
      margin: .2em 0;
    }
    &:hover {
      background-color: #ebebeb;
    }
    &.ui-btn-down-c {
      background-color: #8cbbe2;
    }
  }
}

#more-search-results {
  display: block;
  margin: 0 -15px;
  padding: 0;
  background: rgba(212, 235, 255, 0.6);
  text-align: left;
  padding: 12px;
  @include border-radius(0);
  border: none;

  .ui-btn-inner {
    border: none;
    @include border-radius(0);
  }
  .ui-btn-text {
    @include text-shadow(0 1px 0 white);
    color: #464646;
    font-weight: normal;
  }
}


/* ************************************************************************* *
   Book details page
 * ************************************************************************* */

#book-details {
  .ui-content {
    max-width: 500px;
    padding: 10px;
    text-shadow: none;
    margin: 0 auto;
  }
  .ui-bar-c {
    border: 2px solid #fff;
    background-color: #ebebeb;
    font-size: 13px;
    text-shadow: none;
  }
  .content {
    margin-left: 10px;
    @include clearfix;
    figure {
      float: left;
      margin: 0;
    }
    .details {
      padding-left: 97px;
      margin-right: 10px;

      // Content of detail fields
      span {
        font-weight: normal;
        color: #464646;
      }
    }
  }
  #details-book-title {
    font-size: 1.3em;
    font-weight: bold;
    text-align: left;
    margin: 10px 10px 0 10px;
  }
  #details-book-author {
    font-size: 1.3em;
    font-weight: normal;
    text-align: left;
    margin: 2px 10px 10px 10px;
    color: #464646;
  }
  #details-book-description {
    margin-top: 0;
    font-weight: normal;
    text-align: left;
  }

  #details-book-media {
    height: 30px;
    line-height: 30px;
    margin: 0px;

    span {
      font-weight: bold;
      font-size: 13pt;
      padding-left: 30px;
      display: inline-block;
      height: 100%;
      vertical-align: middle;
      margin-left: -9px;
    }
  }
}

#add-to-bookshelf-button {
  @include action-button(#5c9dd5, a);
}

#details-play-button {
  @include action-button(#879d27, a);
}

#book-unavailable-message {
  margin-top: 5px;
}

/* Book index page */

.section-now-playing {
  height: 18px;
  width: 18px;
  position: absolute;
  right: 50px;
  top:19px;
  left: auto;
  background: transparent url(../images/icons/nowplaying.png) no-repeat 0;
}


/* ************************************************************************* *
   Book player page
 * ************************************************************************* */

#book-play-menu {
  .ui-btn {
    margin: 0 !important;
    border-color: #000;
    border-top: none;
    border-left:none;
    border-right:none;
  }
  .ui-btn-up-a, .ui-btn-hover-a {
    background: $darkbuttoncolor;
  }
  .ui-btn-down-a {
    background: $highlightcolor !important;
  }
  /*
  .ui-icon {
    top: 10px !important;
    width: 25px;
    @include border-radius(0, 0);
  }*/
  .ui-block-a, .ui-block-b, .ui.block-c {
    margin-right: 0px !important;
  }
}

#book-cartoon-content,
#textarea-example,
#book-plain-content,
#book-context-content {
  position: relative;
  height: 100%;
}

#book-cartoon-content, #textarea-example {
  text-shadow: none;
  overflow: hidden;
}

#book-content {
  position: absolute;
  left: 0px;
  right: 0px;
  top: 132px; /* This equals the combined height of the controls at the top of the player
                 Using the trick described by Okendoken in
                 http://stackoverflow.com/questions/4980308
               */
  bottom: 0px;
}

.segmentContainer {
  overflow: hidden; /* Without this, calling slideUp() on the element, will cause a glitch */
}

.missingSegment {
  display: none;
}

.segmentContainer + .missingSegment {
  display: inline;
}

#context-viewer {
  background-color: white;
  border: 0pt;
  width: 100%;
  height: 100%;
  overflow: scroll;
}
/* ... */

